2018-03-26  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexenc.c: Change default_kanji_enc from ENC_SJIS to ENC_UTF8
	(Windows only).

2018-01-17  Karl Berry  <karl@freefriends.org>

	* ptexenc.c: #include <kpathsea/c-pathmx.h>, per Debian.

2017-09-09  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptexenc.c, ptexenc/ptexenc.h: Add a new function setstdinenc()
	 for the primitive \epTeXinputencoding in e-(u)pTeX.

2017-03-18  Karl Berry  <karl@tug.org>

	* version.ac (ptexenc_version): 1.3.5dev => 1.3.5 for TL17.

2016-06-30  Karl Berry  <karl@tug.org>

	* version.ac (ptexenc_version): 1.3.4 => 1.3.5dev.

2016-03-06  Karl Berry  <karl@tug.org>

	* version.ac: remove /dev for start of 2016 builds.

2016-03-01  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptexenc.c: Increase default OPEN_MAX on system
	lacking of OPEN_MAX.

2016-02-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexenc.c, ptexenc/ptexenc.h: Add a function setinfileenc() for a new
	primitive \epTeXinputencoding in e-(u)pTeX. (from N. Abe).

2016-01-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexenc.c: Fix a bug, reported by N. Abe, in isUTF8Nstream().

2015-10-25  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptexenc.c: Enable composition of Hiragana, Katakana
	from combining character sequences to precomposed characters
	in upTeX.

2015-06-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: Update version number 1.3.3 => 1.3.4dev.

2015-05-21  Karl Berry  <karl@tug.org>

	* TL'15.

2015-04-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: 1.3.3 (without the dev) for 2015 pretest.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.
	* version.ac: Update version number 1.3.2 => 1.3.3dev.

2014-04-28  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* ptexenc.c: Accept Ctrl+Z as EOF in console (keyboard)
	in upTeX on Windows.

2014-04-17  Karl Berry  <karl@tug.org>

	* version.ac: 1.3.2 (without the dev) for 2014 pretest.
